# Knowledge-Graph-for-RAG-using-Neo4j

./: .env  Generation.ipynb  KnowLedgeGraph_Design.txt  README.md  graphRAG_generation.py  knowledgeGraph.ipynb  main.py  neo4j_env.py  preprocessing.py  pyproject.toml  requierments.txt  txt2json.py  vectorRAG_generation.py
KnowledgeGraph/: Battle of Waterloo.ipynb  Napoleon.ipynb  Nodes_and_Relationships.ipynb  Talleyrand.ipynb  chunking.py
LLM/: T5.py  model.py
assets/: KnowLedgeGraph_Design.txt
data/cleaned/: Battle of Waterloo.txt  Napoleon.txt  Talleyrand.txt
data/json/: Battle of Waterloo.json  Napoleon.json  Talleyrand.json
data/raw/: Battle of Waterloo.html  Charles Maurice de Talleyrand-Périgord.html  Napoleon.html  The Indispensable Talleyrand _ Hoover Institution The Indispensable Talleyrand.html
